--- a/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_3_0_0.tex
+++ b/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_3_0_0.tex
@@ -1,12 +1,12 @@
 % Analisi dei Requisiti
-% da compilare con il comando pdflatex Analisi_dei_requisiti_x.x.x.tex
+% da compilare con il comando pdflatex Analisi_dei_requisiti_x_x_x.tex
 
 \input{../../util/hx-ambiente}
 
 \version{3.0.0}
 \creaz{19 dicembre 2016}
-\author{\AZ}
-\supervisor{\GG}
+\author{\PB}
+\supervisor{\MM}
 \uso{esterno}
 \dest{\TV, \RC, \ZU}
 \title{Analisi dei Requisiti}
