--- a/Esterni/Definizione_di_prodotto/tex/componenti-FE.tex
+++ b/Esterni/Definizione_di_prodotto/tex/componenti-FE.tex
@@ -51,7 +51,7 @@ Questo package racchiude le classi che definiscono i principali comandi dell'app
 \label{\nogloxy{swedesigner::client::model::NewCellFactory}}
 \begin{figure}[h]
 \centering
-\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{diagrammi/classi/{newcellfactory.png}.pdf}}
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/client/newcellfactory.png}}
 \caption{\nogloxy{swedesigner::client::model::NewCellFactory}}
 \end{figure}
 \FloatBarrier
@@ -143,7 +143,7 @@ questa classe si occupa di fornire un'istanza di una cella del tipo richiesto da
 \label{\nogloxy{swedesigner::client::model::ProjectCommand}}
 \begin{figure}[h]
 \centering
-\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{diagrammi/classi/{projectcommand.png}.pdf}}
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/client/projectcommand.png}}
 \caption{\nogloxy{swedesigner::client::model::ProjectCommand}}
 \end{figure}
 \FloatBarrier
@@ -294,7 +294,7 @@ Questo package contiene la definizione del modello degli elementi specifi del di
 \label{\nogloxy{swedesigner::client::model::celltypes::HxStereotype}}
 \begin{figure}[h]
 \centering
-\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{diagrammi/classi/{hxstereotype.png}.pdf}}
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/client/hxstereotype.png}}
 \caption{\nogloxy{swedesigner::client::model::celltypes::HxStereotype}}
 \end{figure}
 \FloatBarrier
@@ -324,7 +324,7 @@ Questo package contiene la definizione del modello degli elementi specifi del di
 \label{\nogloxy{swedesigner::client::model::celltypes::activity::ActivityDiagramElement}}
 \begin{figure}[h]
 \centering
-\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{diagrammi/classi/{activitydiagramelement.png}.pdf}}
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/client/activitydiagramelement.png}}
 \caption{\nogloxy{swedesigner::client::model::celltypes::activity::ActivityDiagramElement}}
 \end{figure}
 \FloatBarrier
@@ -482,7 +482,7 @@ la classe \texttt{NewCellFactory} ritorna un'istanza di questa classe ogni volta
 \label{\nogloxy{swedesigner::client::model::celltypes::activity::HxVariable}}
 \begin{figure}[h]
 \centering
-\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{diagrammi/classi/{hxassignment.png}.pdf}}
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/client/hxassignment.png}}
 \caption{\nogloxy{swedesigner::client::model::celltypes::activity::HxVariable}}
 \end{figure}
 \FloatBarrier
@@ -538,7 +538,7 @@ Questo package contiene la definizione del modello degli elementi specifi del di
 \label{\nogloxy{swedesigner::client::model::celltypes::class::ClassDiagramElement}}
 \begin{figure}[h]
 \centering
-\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{diagrammi/classi/{classdiagramelement.png}.pdf}}
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/client/classdiagramelement.png}}
 \caption{\nogloxy{swedesigner::client::model::celltypes::class::ClassDiagramElement}}
 \end{figure}
 \FloatBarrier
@@ -597,7 +597,7 @@ questa classe rappresenta le caratteristiche dello stereotipo che viene assegnat
 \label{\nogloxy{swedesigner::client::model::celltypes::class::ClassDiagramLink}}
 \begin{figure}[h]
 \centering
-\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{diagrammi/classi/{classdiagramlink.png}.pdf}}
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/client/classdiagramlink.png}}
 \caption{\nogloxy{swedesigner::client::model::celltypes::class::ClassDiagramLink}}
 \end{figure}
 \FloatBarrier
@@ -745,7 +745,7 @@ la classe \texttt{NewCellFactory} ritorna un'istanza di questa classe ogni volta
 \label{\nogloxy{swedesigner::client::model::celltypes::class::HxComment}}
 \begin{figure}[h]
 \centering
-\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{diagrammi/classi/{hxannotation.png}.pdf}}
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/client/hxannotation.png}}
 \caption{\nogloxy{swedesigner::client::model::celltypes::class::HxComment}}
 \end{figure}
 \FloatBarrier
@@ -905,7 +905,7 @@ Questo package raccoglie le classi che rappresentano i menù laterali e il \text
 \label{\nogloxy{swedesigner::client::view::AppView}}
 \begin{figure}[h]
 \centering
-\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{diagrammi/classi/{appview.png}.pdf}}
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/client/appview.png}}
 \caption{\nogloxy{swedesigner::client::view::AppView}}
 \end{figure}
 \FloatBarrier
