--- a/Esterni/Definizione_di_prodotto/tex/componenti-BE.tex
+++ b/Esterni/Definizione_di_prodotto/tex/componenti-BE.tex
@@ -34,6 +34,12 @@ Questo package contiene le componenti secondarie necessarie al server, indipende
 \subsubsection{Classi}
 \subsubsubsection{\nogloxy{swedesigner::server::Application}}
 \label{\nogloxy{swedesigner::server::Application}}
+\begin{figure}[h]
+\centering
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/server/Application.png}}
+\caption{\nogloxy{swedesigner::server::Application}}
+\end{figure}
+\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 Classe principale che consente l'avvio dell'applicazione spring.
@@ -66,6 +72,12 @@ Questo package offre un'implementazione dell'interfaccia \texttt{Compiler} appar
 \subsubsection{Classi}
 \subsubsubsection{\nogloxy{swedesigner::server::compiler::Compiler}}
 \label{\nogloxy{swedesigner::server::compiler::Compiler}}
+\begin{figure}[h]
+\centering
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/server/Compiler.png}}
+\caption{\nogloxy{swedesigner::server::compiler::Compiler}}
+\end{figure}
+\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 questa interfaccia si occupa di fornire un oggetto compiler generico a chi lo richiede in modo da poter rendere entensibile il sistema aggiungendo un'implementazione concreta del compiler del linguaggio target desiderato.
@@ -100,6 +112,12 @@ Questo package offre un'implementazione dell'interfaccia \texttt{Compiler} appar
 \subsubsection{Classi}
 \subsubsubsection{\nogloxy{swedesigner::server::compiler::java::JavaCompiler}}
 \label{\nogloxy{swedesigner::server::compiler::java::JavaCompiler}}
+\begin{figure}[h]
+\centering
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/server/JavaCompiler.png}}
+\caption{\nogloxy{swedesigner::server::compiler::java::JavaCompiler}}
+\end{figure}
+\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 questa classe è una implementazione di \texttt{Compiler} che permette di creare un jar dal codice sorgente Java.
@@ -139,6 +157,12 @@ Questo package contiene i vari controller che implementano il pattern Front Cont
 \subsubsection{Classi}
 \subsubsubsection{\nogloxy{swedesigner::server::controller::RequestHandlerController}}
 \label{\nogloxy{swedesigner::server::controller::RequestHandlerController}}
+\begin{figure}[h]
+\centering
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/server/RequestHandlerController.png}}
+\caption{\nogloxy{swedesigner::server::controller::RequestHandlerController}}
+\end{figure}
+\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 questa classe si occupa di ricevere le richieste REST provenienti dal client.
@@ -207,6 +231,12 @@ Questo package offre un'implementazione dell'interfaccia \texttt{Generator} appa
 \subsubsection{Classi}
 \subsubsubsection{\nogloxy{swedesigner::server::generator::Generator}}
 \label{\nogloxy{swedesigner::server::generator::Generator}}
+\begin{figure}[h]
+\centering
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/server/Generator.png}}
+\caption{\nogloxy{swedesigner::server::generator::Generator}}
+\end{figure}
+\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 questa interfaccia si occupa di fornire un oggetto \texttt{Generator} generico a chi lo richiede in modo da poter rendere entensibile il sistema aggiungendo un'implementazione concreta del generator del linguaggio target desiderato.
@@ -247,6 +277,12 @@ Questo package offre un'implementazione dell'interfaccia \texttt{Generator} appa
 \subsubsection{Classi}
 \subsubsubsection{\nogloxy{swedesigner::server::generator::java::JavaGenerator}}
 \label{\nogloxy{swedesigner::server::generator::java::JavaGenerator}}
+\begin{figure}[h]
+\centering
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/server/JavaGenerator.png}}
+\caption{\nogloxy{swedesigner::server::generator::java::JavaGenerator}}
+\end{figure}
+\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 questa classe è una implementazione di \texttt{Compiler} che permette di creare del codice sorgente Java da un \texttt{ParsedProgram}.
@@ -286,6 +322,12 @@ Questo package presenta le classi utili all'attività di parsing dei dati ricevu
 \subsubsection{Classi}
 \subsubsubsection{\nogloxy{swedesigner::server::parser::Parser}}
 \label{\nogloxy{swedesigner::server::parser::Parser}}
+\begin{figure}[h]
+\centering
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/server/Parser.png}}
+\caption{\nogloxy{swedesigner::server::parser::Parser}}
+\end{figure}
+\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 questa classe si occupa di elaborare il file JSON proveniente dal client e di creare da esso un oggetto Java \texttt{ParsedProgram} strutturato in modo da poter essere facilmente convertito in codice.
@@ -388,6 +430,12 @@ Questo package contiene al suo interno le classi utili a rappresentare un proget
 \subsubsection{Classi}
 \subsubsubsection{\nogloxy{swedesigner::server::project::ParsedAttribute}}
 \label{\nogloxy{swedesigner::server::project::ParsedAttribute}}
+\begin{figure}[h]
+\centering
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/server/ParsedAttribute.png}}
+\caption{\nogloxy{swedesigner::server::project::ParsedAttribute}}
+\end{figure}
+\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 questa classe rappresenta un singolo attributo, memorizzando il nome della variabile, la sua visibilità e il suo valore di default. Viene utilizzata anche per rappresentare i parametri dei metodi.
@@ -447,17 +495,17 @@ questa classe descrive il contratto di un elemento generico \texttt{Parsed}. Si 
 \\ \textbf{Parametri}:
 \begin{itemize}
 \item \nogloxy{\texttt{isStatic: boolean}}
-\\ Indica se il ParsedAttribute è un oggetto statico.
+\\ Indica se il ParsedAttribute che si sta creando è un oggetto statico.
 \item \nogloxy{\texttt{visibility: String}}
-\\ Indica la visibilità dell'oggetto ParsedAttribute.
+\\ Indica la visibilità dell'oggetto ParsedAttribute che si sta creando.
 \item \nogloxy{\texttt{type: String}}
-\\ Indica il tipo dell'oggetto ParsedAttribute.
+\\ Indica il tipo dell'oggetto ParsedAttribute che si sta creando.
 \item \nogloxy{\texttt{name: String}}
-\\  Indica il nome dell'oggetto ParsedAttribute.
+\\  Indica il nome dell'oggetto ParsedAttribute che si sta creando.
 \item \nogloxy{\texttt{operation: String}}
-\\ Indica l'operatore di assegnazione del valore iniziale dell'oggetto ParsedAttribute.
+\\ Indica l'operatore di assegnazione del valore iniziale dell'oggetto ParsedAttribute che si sta creando.
 \item \nogloxy{\texttt{value: String}}
-\\ Indica il valore iniziale dell'oggetto ParsedAttribute.
+\\ Indica il valore iniziale dell'oggetto ParsedAttribute che si sta creando.
 \end{itemize}
 \item \nogloxy{\texttt{+ renderTemplate(template: Template): String}}
 \\ Traduce l'oggetto ParsedAttribute in una stringa che rappresenta il codice di un particolare linguaggio di programmazione.
@@ -471,6 +519,12 @@ questa classe descrive il contratto di un elemento generico \texttt{Parsed}. Si 
 
 \subsubsubsection{\nogloxy{swedesigner::server::project::ParsedClass}}
 \label{\nogloxy{swedesigner::server::project::ParsedClass}}
+\begin{figure}[h]
+\centering
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/server/ParsedClass.png}}
+\caption{\nogloxy{swedesigner::server::project::ParsedClass}}
+\end{figure}
+\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 questa classe estende la classe astratta \texttt{ParsedType}, imponendo al suo interno la presenza di una lista di \texttt{ParsedAttribute}. 
@@ -519,7 +573,7 @@ questa classe rappresenta un metodo come insieme di istruzioni \texttt{ParsedIst
 \\ \textbf{Parametri}:
 \begin{itemize}
 \item \nogloxy{\texttt{name: String}}
-\\ Indica il nome del supertipo della classe che deve essere implementata o estesa.
+\\ Indica il nome del "supertipo" che deve essere implementato o esteso.
 \item \nogloxy{\texttt{type: String}}
 \\ Indica il tipo, classe o interfaccia, che deve essere rispettivamente esteso o implementato.
 \end{itemize}
@@ -532,9 +586,9 @@ questa classe rappresenta un metodo come insieme di istruzioni \texttt{ParsedIst
 \\ \textbf{Parametri}:
 \begin{itemize}
 \item \nogloxy{\texttt{name: String}}
-\\ Rappresenta il nome di un particolare oggetto ParsedClass.
+\\ Rappresenta il nome del particolare oggetto ParsedClass che si sta creando.
 \item \nogloxy{\texttt{isAbstract: boolean}}
-\\ Indica se l'oggetto ParsedClass è astratto o meno.
+\\ Indica se l'oggetto ParsedClass che si sta creando è astratto o meno.
 \end{itemize}
 \item \nogloxy{\texttt{+ renderTemplate(template: Template): String}}
 \\ Traduce l'oggetto ParsedClass in una stringa che rappresenta il codice di un particolare linguaggio di programmazione.
@@ -548,6 +602,12 @@ questa classe rappresenta un metodo come insieme di istruzioni \texttt{ParsedIst
 
 \subsubsubsection{\nogloxy{swedesigner::server::project::ParsedCustom}}
 \label{\nogloxy{swedesigner::server::project::ParsedCustom}}
+\begin{figure}[h]
+\centering
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/server/ParsedCustom.png}}
+\caption{\nogloxy{swedesigner::server::project::ParsedCustom}}
+\end{figure}
+\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 questa classe descrive il comportamento di un blocco di codice custom, scritto nel linguaggio target.	
@@ -583,6 +643,12 @@ dispone della possibilità di effettuare il render di un template in ingresso.
 
 \subsubsubsection{\nogloxy{swedesigner::server::project::ParsedElement}}
 \label{\nogloxy{swedesigner::server::project::ParsedElement}}
+\begin{figure}[h]
+\centering
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/server/ParsedElement.png}}
+\caption{\nogloxy{swedesigner::server::project::ParsedElement}}
+\end{figure}
+\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 questa classe descrive il contratto di un elemento generico \texttt{Parsed}. Si specifica il metodo \texttt{RenderTemplate} che impone la necessità di implementarlo ad ogni classe sottostante.
@@ -623,6 +689,12 @@ questa classe astratta definisce un contratto comune tra le classi \texttt{Parse
 
 \subsubsubsection{\nogloxy{swedesigner::server::project::ParsedElse}}
 \label{\nogloxy{swedesigner::server::project::ParsedElse}}
+\begin{figure}[h]
+\centering
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/server/ParsedElse.png}}
+\caption{\nogloxy{swedesigner::server::project::ParsedElse}}
+\end{figure}
+\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 questa classe descrive il comportamento di un blocco \texttt{else}.
@@ -641,13 +713,6 @@ dispone della possibilità di effettuare il render di un template in ingresso.
 \begin{itemize}
 \item \nogloxy{\texttt{+ getBody(): List<ParsedInstruction>}}
 \\ Ritorna l'insieme di istruzioni che compongono il corpo del relativo oggetto ParsedElse.
-\item \nogloxy{\texttt{+ ParsedElse(body: List<ParsedInstruction>)}}
-\\ Costruisce un oggetto ParsedElse.
-\\ \textbf{Parametri}:
-\begin{itemize}
-\item \nogloxy{\texttt{body: List<ParsedInstruction>}}
-\\ Indica l'insieme di istruzioni da inserire nel corpo del corrispondente oggetto ParsedElse.
-\end{itemize}
 \item \nogloxy{\texttt{+ renderTemplate(template: Template): String}}
 \\ Traduce l'oggetto ParsedElse in una stringa che rappresenta il codice di un particolare linguaggio di programmazione.
 \\ \textbf{Parametri}:
@@ -656,17 +721,23 @@ dispone della possibilità di effettuare il render di un template in ingresso.
 \\ Riferimento alla particolare istanza di Template da utilizzare.
 \end{itemize}
 \item \nogloxy{\texttt{+ setBody(parsedInstructions: List<ParsedInstruction>): void}}
-\\ Inserisce nel campo dati body del ParsedElse un insieme di ParsedInstruction, ossia inserisce il corpo all'interno del body dell'istruzione \emph{if}.
+\\ Inserisce nel campo dati body del ParsedElse un insieme di ParsedInstruction, ossia inserisce il corpo all'interno del body dell'istruzione \emph{else}.
 \\ \textbf{Parametri}:
 \begin{itemize}
 \item \nogloxy{\texttt{parsedInstructions: List<ParsedInstruction>}}
-\\ Rappresenta l'insieme di istruzioni da inserire nel campo dati body.
+\\ Rappresenta l'insieme di istruzioni da inserire nel corpo del corrispondente oggetto ParsedElse.
 \end{itemize}
 \end{itemize}
 \end{itemize}
 
 \subsubsubsection{\nogloxy{swedesigner::server::project::ParsedException}}
 \label{\nogloxy{swedesigner::server::project::ParsedException}}
+\begin{figure}[h]
+\centering
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/server/ParsedException.png}}
+\caption{\nogloxy{swedesigner::server::project::ParsedException}}
+\end{figure}
+\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 Questa classe rappresenta una eccezione che viene sollevata nel momento in cui viene identificata una illegalità nel parsing della stringa in formato .json
@@ -700,6 +771,12 @@ questa classe estende la classe astratta \textt{ParsedType} ed ha bisogno soltan
 
 \subsubsubsection{\nogloxy{swedesigner::server::project::ParsedFor}}
 \label{\nogloxy{swedesigner::server::project::ParsedFor}}
+\begin{figure}[h]
+\centering
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/server/ParsedFor.png}}
+\caption{\nogloxy{swedesigner::server::project::ParsedFor}}
+\end{figure}
+\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 questa classe descrive il comportamento di un blocco \texttt{for}.
@@ -735,12 +812,12 @@ dispone della possibilità di effettuare il render di un template in ingresso.
 \\ \textbf{Parametri}:
 \begin{itemize}
 \item \nogloxy{\texttt{init: String}}
-\\ Rappresenta l'istruzione di inizializzazione di un particolare oggetto ParsedFor.
+\\ Rappresenta l'istruzione di inizializzazione del particolare oggetto ParsedFor che si sta creando.
 \item \nogloxy{\texttt{condition: String}}
-\\ Rappresenta la condizione del corrispondente oggetto ParsedFor.
+\\ Rappresenta la condizione del particolare oggetto ParsedFor che si sta creando.
 
 \item \nogloxy{\texttt{step: String}}
-\\ Rapprensenta il passo di incremento o decremento del corrispondente oggetto ParsedFor.
+\\ Rapprensenta il passo di incremento o decremento del particolare oggetto ParsedFor che si sta creando.
 \end{itemize}
 \item \nogloxy{\texttt{+ renderTemplate(template: Template): String}}
 \\ Traduce l'oggetto ParsedFor in una stringa che rappresenta il codice di un particolare linguaggio di programmazione.
@@ -749,13 +826,24 @@ dispone della possibilità di effettuare il render di un template in ingresso.
 \item \nogloxy{\texttt{template: Template}}
 \\ Riferimento alla particolare istanza di Template da utilizzare.
 \end{itemize}
-\item \nogloxy{\texttt{+ setBody(): void}}
+\item \nogloxy{\texttt{+ setBody(parsedInstructions: List<ParsedInstruction>): void}}
 \\ Permette di assegnare un insieme di istruzioni al corpo di un oggetto ParsedFor.
+\\ \textbf{Parametri}:
+\begin{itemize}
+\item \nogloxy{\texttt{parsedInstructions: List<ParsedInstruction>}}
+\\ Rappresenta l'insieme di istruzioni da inserire nel corpo del corrispondente oggetto ParsedFor.
+\end{itemize}
 \end{itemize}
 \end{itemize}
 
 \subsubsubsection{\nogloxy{swedesigner::server::project::ParsedIf}}
 \label{\nogloxy{swedesigner::server::project::ParsedIf}}
+\begin{figure}[h]
+\centering
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/server/ParsedIf.png}}
+\caption{\nogloxy{swedesigner::server::project::ParsedIf}}
+\end{figure}
+\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 questa classe descrive il comportamento di un blocco \texttt{if}.
@@ -778,15 +866,38 @@ dispone della possibilità di effettuare il render di un template in ingresso.
 \\ Ritorna l'insieme di istruzioni contenute nel corpo di un oggetto ParsedIf.
 \item \nogloxy{\texttt{+ getCondition(): String}}
 \\ Ritorna la condizione di un oggetto ParsedIf.
-\item \nogloxy{\texttt{+ ParsedIf()}}
+\item \nogloxy{\texttt{+ ParsedIf(condition: String)}}
 \\ Costruisce un oggetto ParsedIf.
-\item \nogloxy{\texttt{+ renderTemplate(): String}}
+\\ \textbf{Parametri}:
+\begin{itemize}
+\item \nogloxy{\texttt{condition: String}}
+\\ Rappresenta la condizione del particolare oggetto ParsedIf che si sta creando.
+\end{itemize}
+\item \nogloxy{\texttt{+ renderTemplate(template: Template): String}}
 \\ Traduce l'oggetto ParsedIf in una stringa che rappresenta il codice di un particolare linguaggio di programmazione.
+\\ \textbf{Parametri}:
+\begin{itemize}
+\item \nogloxy{\texttt{template: Template}}
+\\ Riferimento alla particolare istanza di Template da utilizzare.
+\end{itemize}
+\item \nogloxy{\texttt{+ setBody(parsedInstructions: List<ParsedInstruction>): void}}
+\\ Inserisce nel campo dati body del ParsedIf un insieme di ParsedInstruction, ossia inserisce il corpo all'interno del body dell'istruzione \emph{if}.
+\\ \textbf{Parametri}:
+\begin{itemize}
+\item \nogloxy{\texttt{parsedInstructions: List<ParsedInstruction>}}
+\\ Indica l'insieme di istruzioni da inserire nel corpo del corrispondente oggetto ParsedIf.
+\end{itemize}
 \end{itemize}
 \end{itemize}
 
 \subsubsubsection{\nogloxy{swedesigner::server::project::ParsedInstruction}}
 \label{\nogloxy{swedesigner::server::project::ParsedInstruction}}
+\begin{figure}[h]
+\centering
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/server/ParsedInstruction.png}}
+\caption{\nogloxy{swedesigner::server::project::ParsedInstruction}}
+\end{figure}
+\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 questa classe astratta rappresenta la singola istruzione contenuta all'interno di un metodo. Essa è estesa dalle istruzioni specifiche (e.g. \texttt{ParsedIf}, \texttt{ParsedWhile}, etc.)
@@ -813,13 +924,24 @@ questa classe descrive il contratto di un elemento generico \texttt{Parsed}. Si 
 \end{itemize}
 \item \textbf{Metodi}:
 \begin{itemize}
-\item \nogloxy{\texttt{+ setBody(): void}}
+\item \nogloxy{\texttt{+ setBody(parsedInstructions: List<ParsedInstruction>): void}}
 \\ Permette di assegnare un insieme di istruzioni al corpo di un oggetto ParsedInstruction.
+\\ \textbf{Parametri}:
+\begin{itemize}
+\item \nogloxy{\texttt{parsedInstructions: List<ParsedInstruction>}}
+\\ Rappresenta l'insieme di istruzioni da inserire nel corpo di una particolare ParsedInstruction.
+\end{itemize}
 \end{itemize}
 \end{itemize}
 
 \subsubsubsection{\nogloxy{swedesigner::server::project::ParsedInterface}}
 \label{\nogloxy{swedesigner::server::project::ParsedInterface}}
+\begin{figure}[h]
+\centering
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/server/ParsedInterface.png}}
+\caption{\nogloxy{swedesigner::server::project::ParsedInterface}}
+\end{figure}
+\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 questa classe estende la classe astratta \textt{ParsedType} ed ha bisogno soltanto della firma dei metodi essendo una classe che contiene informazioni riguardo un'interfaccia pura.
@@ -838,21 +960,54 @@ questa classe rappresenta un metodo come insieme di istruzioni \texttt{ParsedIst
 \end{itemize}
 \item \textbf{Metodi}:
 \begin{itemize}
-\item \nogloxy{\texttt{+ addField(): void}}
+\item \nogloxy{\texttt{+ addField(parsedAttribute: ParsedAttribute): void}}
 \\ Aggiunge all'oggetto ParsedInterface un campo dati rappresentato da un oggetto ParsedAttribute.
-\item \nogloxy{\texttt{+ addMethod(): void}}
+\\ \textbf{Parametri}:
+\begin{itemize}
+\item \nogloxy{\texttt{parsedAttribute: ParsedAttribute}}
+\\ Rappresenta un campo dati in forma di oggetto ParsedAttribute.
+\end{itemize}
+\item \nogloxy{\texttt{+ addMethod(parsedMethod: ParsedMethod): void}}
 \\ Aggiunge ad un oggetto ParsedInterface un metodo rappresentato da un oggetto ParsedMethod.
-\item \nogloxy{\texttt{+ addSupertype(): void}}
+\\ \textbf{Parametri}:
+\begin{itemize}
+\item \nogloxy{\texttt{parsedMethod: ParsedMethod}}
+\\ Rappresenta un metodo in forma di oggetto ParsedMethod.
+\end{itemize}
+\item \nogloxy{\texttt{+ addSupertype(name: String, type: String): void}}
 \\ Aggiunge il nome di uno dei "supertipi" diretti dell'oggetto ParsedInterface.
-\item \nogloxy{\texttt{+ ParsedInterface()}}
+\\ \textbf{Parametri}:
+\begin{itemize}
+\item \nogloxy{\texttt{name: String}}
+\\ Rappresenta il nome del "supertipo" che deve essere esteso.
+\item \nogloxy{\texttt{type: String}}
+\\ Indica il supertipo tipo che deve essere esteso.
+\end{itemize}
+\item \nogloxy{\texttt{+ ParsedInterface(name: String)}}
 \\ Costruisce un oggetto ParsedInterface.
-\item \nogloxy{\texttt{+ renderTemplate(): String}}
+\\ \textbf{Parametri}:
+\begin{itemize}
+\item \nogloxy{\texttt{name: String}}
+\\ Rappresenta il nome del particolare oggetto ParsedInterface che si sta creando.
+\end{itemize}
+\item \nogloxy{\texttt{+ renderTemplate(template: Template): String}}
 \\ Traduce l'oggetto ParsedInterface in una stringa che rappresenta il codice di un particolare linguaggio di programmazione.
+\\ \textbf{Parametri}:
+\begin{itemize}
+\item \nogloxy{\texttt{template: Template}}
+\\ Riferimento alla particolare istanza di Template da utilizzare.
+\end{itemize}
 \end{itemize}
 \end{itemize}
 
 \subsubsubsection{\nogloxy{swedesigner::server::project::ParsedMethod}}
 \label{\nogloxy{swedesigner::server::project::ParsedMethod}}
+\begin{figure}[h]
+\centering
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/server/ParsedMethod.java}}
+\caption{\nogloxy{swedesigner::server::project::ParsedMethod}}
+\end{figure}
+\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 questa classe rappresenta un metodo come insieme di istruzioni \texttt{ParsedIstruction} e un insieme di \texttt{ParsedAttribute} come parametri del metodo.
@@ -893,13 +1048,13 @@ questa classe astratta rappresenta la singola istruzione contenuta all'interno d
 \\ Indica l'insieme di ParsedAttribute che rappresentano i parametri di un ParsedMethod.
 \item \nogloxy{\texttt{- body: List<ParsedInstruction>}}
 \\ Indica l'insieme di istruzioni che compongono il corpo del relativo oggetto ParsedMethod.
-\item \nogloxy{\texttt{- is_abstract: boolean}}
+\item \nogloxy{\texttt{- isAbstract: boolean}}
 \\ Indica se il ParsedMethod rappresenta un metodo astratto o meno.
-\item \nogloxy{\texttt{- is_static: boolean}}
+\item \nogloxy{\texttt{- isStatic: boolean}}
 \\ Indica se il ParsedMethod rappresenta un metodo statico o meno.
 \item \nogloxy{\texttt{- name: String}}
 \\ Indica il nome dell'oggetto ParsedMethod.
-\item \nogloxy{\texttt{- return_type: String}}
+\item \nogloxy{\texttt{- returnType: String}}
 \\ Indica il tipo di ritorno di un oggetto ParsedMethod.
 \item \nogloxy{\texttt{- visibility: String}}
 \\ Indica la visibilità dell'oggetto ParsedMethod.
@@ -910,25 +1065,53 @@ questa classe astratta rappresenta la singola istruzione contenuta all'interno d
 \\ Ritorna l'insieme di ParsedAttribute che rappresentano i parametri di un ParsedMethod.
 \item \nogloxy{\texttt{+ getBody(): List<ParsedInstruction>}}
 \\ Ritorna l'insieme di istruzioni che compongono il corpo del relativo oggetto ParsedMethod.
-\item \nogloxy{\texttt{+ getIs_abstract(): boolean}}
+\item \nogloxy{\texttt{+ getIsAbstract(): boolean}}
 \\ Indica se l'oggetto ParsedMethod è astratto o meno.
-\item \nogloxy{\texttt{+ getIs_static(): boolean}}
+\item \nogloxy{\texttt{+ getIsStatic(): boolean}}
 \\ Ritorna informazioni riguardanti la staticità di un oggetto ParsedMethod.
 \item \nogloxy{\texttt{+ getName(): String}}
 \\ Ritorna il nome di un oggetto ParsedMethod.
-\item \nogloxy{\texttt{+ getReturn_type(): String}}
+\item \nogloxy{\texttt{+ getReturnType(): String}}
 \\ Ritorna il tipo di ritorno di un oggetto ParsedMethod.
 \item \nogloxy{\texttt{+ getVisibility(): String}}
 \\ Ritorna la visibilità di un oggetto ParsedMethod.
-\item \nogloxy{\texttt{+ ParsedMethod()}}
+\item \nogloxy{\texttt{+ ParsedMethod(visibility: String, isStatic: boolean, isAbstract: boolean, returnType: String, args: List<ParsedAttribute>, body: List<ParsedInstruction>, name: String)}}
 \\ Costruisce un oggetto ParsedMethod.
-\item \nogloxy{\texttt{+ renderTemplate(): String}}
+\\ \textbf{Parametri}:
+\begin{itemize}
+\item \nogloxy{\texttt{visibility: String}}
+\\ Rappresenta la visibilità dell'oggetto ParsedMethod che si sta creando.
+\item \nogloxy{\texttt{isStatic: boolean}}
+\\ Indica se il ParsedMethod che si sta creando rappresenterà un metodo statico o meno.
+\item \nogloxy{\texttt{isAbstract: boolean}}
+\\ Indica se il ParsedMethod che si sta creando rappresenterà un metodo astratto o meno.
+\item \nogloxy{\texttt{returnType: String}}
+\\ Indica il tipo di ritorno dell'oggetto ParsedMethod che si sta creando.
+\item \nogloxy{\texttt{args: List<ParsedAttribute>}}
+\\ Indica l'insieme di ParsedAttribute che rappresenteranno i parametri del ParsedMethod che si sta creando.
+\item \nogloxy{\texttt{body: List<ParsedInstruction>}}
+\\ Indica l'insieme di istruzioni che comporranno il corpo del relativo oggetto ParsedMethod che si sta creando.
+\item \nogloxy{\texttt{name: String}}
+\\ Indica il nome dell'oggetto ParsedMethod che si sta creando.
+\end{itemize}
+\item \nogloxy{\texttt{+ renderTemplate(template: Tempate): String}}
 \\ Traduce l'oggetto ParsedMethod in una stringa che rappresenta il codice di un particolare linguaggio di programmazione.
+\\ \textbf{Parametri}:
+\begin{itemize}
+\item \nogloxy{\texttt{template: Tempate}}
+\\ Riferimento alla particolare istanza di Template da utilizzare.
+\end{itemize}
 \end{itemize}
 \end{itemize}
 
 \subsubsubsection{\nogloxy{swedesigner::server::project::ParsedProgram}}
 \label{\nogloxy{swedesigner::server::project::ParsedProgram}}
+\begin{figure}[h]
+\centering
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/server/ParsedProgram.png}}
+\caption{\nogloxy{swedesigner::server::project::ParsedProgram}}
+\end{figure}
+\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 questa classe rappresenta l'entità che possiede al suo interno tutte le componenti di un progetto. Essa possiede più \texttt{ParsedType}.
@@ -948,10 +1131,20 @@ questa classe astratta definisce un contratto comune tra le classi \texttt{Parse
 \end{itemize}
 \item \textbf{Metodi}:
 \begin{itemize}
-\item \nogloxy{\texttt{+ addType(): void}}
+\item \nogloxy{\texttt{+ addType(type: ParsedType): void}}
 \\ Aggiunge un tipo (ParsedClass o ParsedInterface) al ParsedProgram, ossia aggiunge una classe o un'interfaccia al programma.
-\item \nogloxy{\texttt{+ getType(): ParsedType}}
+\\ \textbf{Parametri}:
+\begin{itemize}
+\item \nogloxy{\texttt{type: ParsedType}}
+\\ Rappresenta un ParsedType (ParsedClass o ParsedInterface) che deve essere inserito nel particolare ParsedProgram, ossia la classe o l'nterfaccia da aggiungere al programma.
+\end{itemize}
+\item \nogloxy{\texttt{+ getType(position: int): ParsedType}}
 \\ Ritorna l'i-esimo elemento (ParsedClass o ParsedInterface) contenuto nella lista di ParsedType.
+\\ \textbf{Parametri}:
+\begin{itemize}
+\item \nogloxy{\texttt{position: int}}
+\\ Rappresenta la posizione di un particolare ParsedType all'interno del ParsedProgram.
+\end{itemize}
 \item \nogloxy{\texttt{+ nClasses(): int}}
 \\ Ritorna il numero complessivo di classi ed interfacce che formano il ParsedProgram.
 \end{itemize}
@@ -959,6 +1152,12 @@ questa classe astratta definisce un contratto comune tra le classi \texttt{Parse
 
 \subsubsubsection{\nogloxy{swedesigner::server::project::ParsedReturn}}
 \label{\nogloxy{swedesigner::server::project::ParsedReturn}}
+\begin{figure}[h]
+\centering
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/server/ParsedReturn.png}}
+\caption{\nogloxy{swedesigner::server::project::ParsedReturn}}
+\end{figure}
+\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 questa classe descrive il comportamento di un blocco di ritorno di un metodo.
@@ -977,15 +1176,31 @@ dispone della possibilità di effettuare il render di un template in ingresso.
 \begin{itemize}
 \item \nogloxy{\texttt{+ getValue(): String}}
 \\ Ritorna il valore del corrispondente oggetto ParsedReturn.
-\item \nogloxy{\texttt{+ ParsedReturn()}}
+\item \nogloxy{\texttt{+ ParsedReturn(value: String)}}
 \\ Costruisce un oggetto ParsedReturn.
-\item \nogloxy{\texttt{+ renderTemplate(): String}}
+\\ \textbf{Parametri}:
+\begin{itemize}
+\item \nogloxy{\texttt{value: String}}
+\\ Rappresenta il valore che dovrà essere assegnato al campo dati value di un oggetto ParsedReturn.
+\end{itemize}
+\item \nogloxy{\texttt{+ renderTemplate(template: Template): String}}
 \\ Traduce l'oggetto ParsedReturn in una stringa che rappresenta il codice di un particolare linguaggio di programmazione.
+\\ \textbf{Parametri}:
+\begin{itemize}
+\item \nogloxy{\texttt{template: Template}}
+\\ Riferimento alla particolare istanza di Template da utilizzare.
+\end{itemize}
 \end{itemize}
 \end{itemize}
 
 \subsubsubsection{\nogloxy{swedesigner::server::project::ParsedStatement}}
 \label{\nogloxy{swedesigner::server::project::ParsedStatement}}
+\begin{figure}[h]
+\centering
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/server/ParsedStatement.png}}
+\caption{\nogloxy{swedesigner::server::project::ParsedStatement}}
+\end{figure}
+\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 questa classe descrive il comportamento di un blocco di assegnazione variabile o inizializzazione variabile.	
@@ -1018,15 +1233,37 @@ dispone della possibilità di effettuare il render di un template in ingresso.
 \\ Ritorna il tipo dell'oggetto ParsedStatement.
 \item \nogloxy{\texttt{+ getValue(): String}}
 \\ Ritorna il valore dell'oggetto ParsedStatement.
-\item \nogloxy{\texttt{+ ParsedStatment()}}
+\item \nogloxy{\texttt{+ ParsedStatment(type: String, name: String, operation: String, value: String)}}
 \\ Costruisce un oggetto ParsedStatement.
-\item \nogloxy{\texttt{+ renderTemplate(): String}}
+\\ \textbf{Parametri}:
+\begin{itemize}
+\item \nogloxy{\texttt{type: String}}
+\\ Rappresenta il tipo dell'oggetto ParsedStatement che si sta creando.
+\item \nogloxy{\texttt{name: String}}
+\\ Rappresenta il nome dell'oggetto ParsedStatement che si sta creando.
+\item \nogloxy{\texttt{operation: String}}
+\\ Rappresenta l'operazione dell'oggetto ParsedStatement che si sta creando.
+\item \nogloxy{\texttt{value: String}}
+\\ Indica il valore dell'oggetto ParsedStatement che si sta creando.
+\end{itemize}
+\item \nogloxy{\texttt{+ renderTemplate(template: Template): String}}
 \\ Traduce l'oggetto ParsedStatement in una stringa che rappresenta il codice di un particolare linguaggio di programmazione.
+\\ \textbf{Parametri}:
+\begin{itemize}
+\item \nogloxy{\texttt{template: Template}}
+\\ Riferimento alla particolare istanza di Template da utilizzare.
+\end{itemize}
 \end{itemize}
 \end{itemize}
 
 \subsubsubsection{\nogloxy{swedesigner::server::project::ParsedType}}
 \label{\nogloxy{swedesigner::server::project::ParsedType}}
+\begin{figure}[h]
+\centering
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/server/ParsedType.png}}
+\caption{\nogloxy{swedesigner::server::project::ParsedType}}
+\end{figure}
+\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 questa classe astratta definisce un contratto comune tra le classi \texttt{ParsedInterface} e \texttt{ParsedClass}. 
@@ -1050,22 +1287,39 @@ questa classe rappresenta un metodo come insieme di istruzioni \texttt{ParsedIst
 \item \textbf{Attributi}:
 \begin{itemize}
 \item \nogloxy{\texttt{- attributes: List<ParsedAttribute>}}
-\\ Rappresenta la lista dei campi dati di un particoare ParsedType.
+\\ Rappresenta la lista dei campi dati di un particolare ParsedType.
 \item \nogloxy{\texttt{- extended: List<String>}}
-\\ Rappresenta l'insieme dei supertipi diretti estesi da un particolare ParsedType.
+\\ Rappresenta l'insieme dei "supertipi" diretti estesi da un particolare ParsedType.
 \item \nogloxy{\texttt{- methods: List<ParsedMethod>}}
 \\ Rappresenta la lista dei metodi di un particolare ParsedType.
 \item \nogloxy{\texttt{- name: String}}
-\\ Rappresenta il nome di un particolare oggetto ParsedType
+\\ Rappresenta il nome di un particolare oggetto ParsedType.
 \end{itemize}
 \item \textbf{Metodi}:
 \begin{itemize}
-\item \nogloxy{\texttt{+ addField(): void}}
+\item \nogloxy{\texttt{+ addField(parsedAttribute: ParsedAttribute): void}}
 \\ Aggiunge all'oggetto ParsedType un campo dati rappresentato da un oggetto ParsedAttribute.
-\item \nogloxy{\texttt{+ addMethod(): void}}
+\\ \textbf{Parametri}:
+\begin{itemize}
+\item \nogloxy{\texttt{parsedAttribute: ParsedAttribute}}
+\\ Rappresenta il campo dati da inserire in un particolare oggetto ParsedType.
+\end{itemize}
+\item \nogloxy{\texttt{+ addMethod(parsedMethod: ParsedMethod): void}}
 \\ Aggiunge ad un oggetto ParsedType un metodo rappresentato da un oggetto ParsedMethod.
-\item \nogloxy{\texttt{+ addSupertype(): void}}
+\\ \textbf{Parametri}:
+\begin{itemize}
+\item \nogloxy{\texttt{parsedMethod: ParsedMethod}}
+\\ Rappresenta il metodo da inserire in un particolare ParsedType.
+\end{itemize}
+\item \nogloxy{\texttt{+ addSupertype(name: String, type: String): void}}
 \\ Aggiunge il nome di uno dei "supertipi" diretti dell'oggetto ParsedType.
+\\ \textbf{Parametri}:
+\begin{itemize}
+\item \nogloxy{\texttt{name: String}}
+\\ Indica il nome del "supertipo" che deve essere implementato o esteso.
+\item \nogloxy{\texttt{type: String}}
+\\ Indica il tipo, classe o interfaccia, che deve essere rispettivamente esteso o implementato.
+\end{itemize}
 \item \nogloxy{\texttt{+ getAttributes(): List<ParsedAttribute>}}
 \\ Ritorna la lista di campi dati di un particolare ParsedType.
 \item \nogloxy{\texttt{+ getExtended(): List<String>}}
@@ -1074,11 +1328,24 @@ questa classe rappresenta un metodo come insieme di istruzioni \texttt{ParsedIst
 \\ Ritorna la lista dei metodi di un particolare ParsedType.
 \item \nogloxy{\texttt{+ getName(): String}}
 \\ Ritorna il nome di un particolare ParsedType.
+\item \nogloxy{\texttt{+ ParsedType(name: String)}}
+\\ Costruisce un oggetto ParsedType.
+\\ \textbf{Parametri}:
+\begin{itemize}
+\item \nogloxy{\texttt{name: String}}
+\\ Rappresenta il nome dell'oggetto ParsedType che si sta creando.
+\end{itemize}
 \end{itemize}
 \end{itemize}
 
 \subsubsubsection{\nogloxy{swedesigner::server::project::ParsedWhile}}
 \label{\nogloxy{swedesigner::server::project::ParsedWhile}}
+\begin{figure}[h]
+\centering
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/server/ParsedWhile.png}}
+\caption{\nogloxy{swedesigner::server::project::ParsedWhile}}
+\end{figure}
+\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 questa classe descrive il comportamento di un blocco \texttt{while} e dispone della possibilità di effettuare il render di un template in ingresso.
@@ -1101,10 +1368,29 @@ deriva da \texttt{ParsedInstruction}.
 \\ Ritorna l'insieme di istruzioni contenute nel corpo di un oggetto ParsedWhile.
 \item \nogloxy{\texttt{+ getCondition(): String}}
 \\ Ritorna la condizione di un oggetto ParsedWhile.
-\item \nogloxy{\texttt{+ renderTemplate(): String}}
+\item \nogloxy{\texttt{+ ParsedWhile(condition: String, body: List<ParsedInstruction>)}}
+\\ Costruisce un oggetto ParsedWhile.
+\\ \textbf{Parametri}:
+\begin{itemize}
+\item \nogloxy{\texttt{condition: String}}
+\\ Rappresenta la condizione dell'oggetto ParsedWhile che si sta creando.
+\item \nogloxy{\texttt{body: List<ParsedInstruction>}}
+\\ Rappresenta l'insieme di istruzioni contenute nel corpo dell'oggetto ParsedWhile che si sta creando.
+\end{itemize}
+\item \nogloxy{\texttt{+ renderTemplate(template: Template): String}}
 \\ Traduce l'oggetto ParsedWhile in una stringa che rappresenta il codice di un particolare linguaggio di programmazione.
-\item \nogloxy{\texttt{+ setBody(): void}}
+\\ \textbf{Parametri}:
+\begin{itemize}
+\item \nogloxy{\texttt{template: Template}}
+\\ Riferimento alla particolare istanza di Template da utilizzare.
+\end{itemize}
+\item \nogloxy{\texttt{+ setBody(parsedInstructions: List<ParsedInstruction>): void}}
 \\ Permette di assegnare un insieme di istruzioni al corpo di un oggetto ParsedWhile.
+\\ \textbf{Parametri}:
+\begin{itemize}
+\item \nogloxy{\texttt{parsedInstructions: List<ParsedInstruction>}}
+\\ Rappresenta l'insieme di istruzioni da inserire nel corpo del corrispondente oggetto ParsedWhile.
+\end{itemize}
 \end{itemize}
 \end{itemize}
 \subsection{\nogloxy{swedesigner::server::stereotype}}
@@ -1132,6 +1418,12 @@ Questo package definisce le operazioni necessarie all'applicazione del template 
 \subsubsection{Classi}
 \subsubsubsection{\nogloxy{swedesigner::server::template::Template}}
 \label{\nogloxy{swedesigner::server::template::Template}}
+\begin{figure}[h]
+\centering
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/server/Template.png}}
+\caption{\nogloxy{swedesigner::server::template::Template}}
+\end{figure}
+\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 questa interfaccia si occupa di fornire un oggetto template generico a chi lo richiede in modo da poter rendere estensibile il sistema aggiungendo un'implementazione concreta del template del linguaggio target desiderato.
@@ -1179,6 +1471,12 @@ Questo package definisce le operazioni necessarie all'applicazione del template 
 \subsubsection{Classi}
 \subsubsubsection{\nogloxy{swedesigner::server::template::java::JavaTemplate}}
 \label{\nogloxy{swedesigner::server::template::java::JavaTemplate}}
+\begin{figure}[h]
+\centering
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/server/JavaTemplate.png}}
+\caption{\nogloxy{swedesigner::server::template::java::JavaTemplate}}
+\end{figure}
+\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 questa classe è una implementazione di \texttt{Template} che permette di fornire un template di una classe, metodo o costrutto Java.
@@ -1229,6 +1527,12 @@ Questo package contiene le componenti secondarie necessarie al server, indipende
 \subsubsection{Classi}
 \subsubsubsection{\nogloxy{swedesigner::server::utility::Compressor}}
 \label{\nogloxy{swedesigner::server::utility::Compressor}}
+\begin{figure}[h]
+\centering
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/server/Compressor.png}}
+\caption{\nogloxy{swedesigner::server::utility::Compressor}}
+\end{figure}
+\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 questa classe si occupa di creare e salvare su disco un archivio compresso contenente il progetto JSON, il codice sorgente e l'eseguibile generato che verrà poi messo a disposizione dell'utente che potrà scaricarlo.
