--- a/Esterni/Specifica_tecnica/Specifica_tecnica_2_0_0.tex
+++ b/Esterni/Specifica_tecnica/Specifica_tecnica_2_0_0.tex
@@ -68,6 +68,9 @@
 \section{Architettura di Backbone.js}
 \input{tex/appbackbone}
 
+\section{Spring Boot}
+\input{tex/appspring}
+
 \section{Design pattern} \label{sec:app_creaz}
 \input{tex/pattern}
 
