--- a/Esterni/Definizione_di_prodotto/tex/componenti-BE.tex
+++ b/Esterni/Definizione_di_prodotto/tex/componenti-BE.tex
@@ -206,7 +206,7 @@ Il suo compito è:
 \item istanziare un oggetto Compressor ed invocare su di esso il metodo zip per realizzare la risorsa .zip da ritornare all'utente;
 \item ritornare in risposta all'utente il link a partire dal quale scaricare la risorsa .zip desiderata oppure un messaggio contenente gli errori rilevati dal Parser o dal Generator.
 \end{itemize}
-\\ \textbf{Parametri}:
+\textbf{Parametri}:
 \begin{itemize}
 \item \nogloxy{\texttt{json: String}}
 \\ Rappresenta il contenuto del file .json in forma di stringa.
@@ -1004,7 +1004,7 @@ questa classe rappresenta un metodo come insieme di istruzioni \texttt{ParsedIst
 \label{\nogloxy{swedesigner::server::project::ParsedMethod}}
 \begin{figure}[h]
 \centering
-\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/server/ParsedMethod.java}}
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/server/ParsedMethod.png}}
 \caption{\nogloxy{swedesigner::server::project::ParsedMethod}}
 \end{figure}
 \FloatBarrier
