--- a/Esterni/Definizione_di_prodotto/tex/componenti-FE.tex
+++ b/Esterni/Definizione_di_prodotto/tex/componenti-FE.tex
@@ -662,7 +662,7 @@ eredita dalla classe \texttt{ClassDiagramLink}. È indirettamente collegata a \t
 \item \nogloxy{\texttt{+ setToValue(path: string, value: string): void}}
 \\ Questo metodo si occupa di impostare un attributo passato come parametro al valore scelto
 
-\\ \textbf{Parametri}:
+\textbf{Parametri}:
 \begin{itemize}
 \item \nogloxy{\texttt{path: string}}
 \\ Questo parametro indica l'attributo da modificare
@@ -771,7 +771,7 @@ la classe \texttt{NewCellFactory} ritorna un'istanza di questa classe ogni volta
 \item \nogloxy{\texttt{+ setToValue(path: string, value: string): void}}
 \\ Questo metodo si occupa di impostare un attributo passato come parametro al valore scelto
 
-\\ \textbf{Parametri}:
+\textbf{Parametri}:
 \begin{itemize}
 \item \nogloxy{\texttt{path: string}}
 \\ Questo parametro indica l'attributo da modificare
@@ -841,7 +841,7 @@ la classe \texttt{NewCellFactory} ritorna un'istanza di questa classe ogni volta
 \item \nogloxy{\texttt{- addParameter(ind: int): void}}
 \\ Questo metodo inserisce un nuovo parametro al metodo alla posizione indicata
 
-\\ \textbf{Parametri}:
+\textbf{Parametri}:
 \begin{itemize}
 \item \nogloxy{\texttt{ind: int}}
 \\ Questo parametro indica l'indice del metodo al quale si vuole aggiungere un nuovo parametro
@@ -850,7 +850,7 @@ la classe \texttt{NewCellFactory} ritorna un'istanza di questa classe ogni volta
 \item \nogloxy{\texttt{- deleteMethod(ind: int): void}}
 \\ Questo metodo elimina il metodo alla posizione descritta dall'indice passato come parametro
 
-\\ \textbf{Parametri}:
+\textbf{Parametri}:
 \begin{itemize}
 \item \nogloxy{\texttt{ind: int}}
 \\ Questo parametro indica l'indice del metodo da rimuovere
@@ -859,7 +859,7 @@ la classe \texttt{NewCellFactory} ritorna un'istanza di questa classe ogni volta
 \item \nogloxy{\texttt{- deleteParameter(met: int[]): void}}
 \\ Questo metodo cancella un parametro al metodo specificato
 
-\\ \textbf{Parametri}:
+\textbf{Parametri}:
 \begin{itemize}
 \item \nogloxy{\texttt{met: int[]}}
 \\ Questo parametro indica gli indici utili per identificare il parametro da rimuovere
@@ -1080,7 +1080,7 @@ All'interno di questo oggetto di \jointjs{} sono presenti alcuni elementi aggiun
 \item \nogloxy{\texttt{+ deleteCell(e: Event): void}}
 \\ Esegue la cancellazione di una cella da un diagramma tramite il tasto \emph{Canc}.
 
-\\ \textbf{Parametri}:
+\textbf{Parametri}:
 \begin{itemize}
 \item \nogloxy{\texttt{e: Event}}
 \\ L'evento che ha scatenato questo metodo.
@@ -1088,7 +1088,7 @@ All'interno di questo oggetto di \jointjs{} sono presenti alcuni elementi aggiun
 \item \nogloxy{\texttt{+ deleteMethodAt(ind: int): void}}
 \\ Cancella un diagramma dei metodi.	
 
-\\ \textbf{Parametri}:
+\textbf{Parametri}:
 \begin{itemize}
 \item \nogloxy{\texttt{ind: int}}
 \\ Indice del metodo da rimuovere.
@@ -1110,7 +1110,7 @@ All'interno di questo oggetto di \jointjs{} sono presenti alcuni elementi aggiun
 \item \nogloxy{\texttt{- pointerMoveFunction(cellView: CellView): void}}
 \\ Gestisce il movimento del mouse da parte dell'utente durante un drag\&drop, evidenziando la cella in cui sarà inserita la cella che l'utente sta strascinando.	
 
-\\ \textbf{Parametri}:
+\textbf{Parametri}:
 \begin{itemize}
 \item \nogloxy{\texttt{cellView: CellView}}
 \\ View della cella trascinata.
@@ -1119,7 +1119,7 @@ All'interno di questo oggetto di \jointjs{} sono presenti alcuni elementi aggiun
 \item \nogloxy{\texttt{- pointerUpFunction(cellView: CellView, evt: Event, x: int, y: int): void}}
 \\ Gestisce il drop di una cella, occupandosi delle seguenti operazioni: \begin{itemize} \item Spostamento della cella in una nuova posizione \item Spostamento dei figli della cella nella nuova posizione (corretta) \item Operazioni di cambiamento del padre \item Aggiornare nuovamente l'area di disegno \end{itemize} Si lascia all'implementatore la possibilità di spezzare questo metodo in più componenti, nel caso questo risulti complicato da sviluppare e da testare.	
 
-\\ \textbf{Parametri}:
+\textbf{Parametri}:
 \begin{itemize}
 \item \nogloxy{\texttt{cellView: CellView}}
 \\ View della cella selezionata.
@@ -1136,7 +1136,7 @@ All'interno di questo oggetto di \jointjs{} sono presenti alcuni elementi aggiun
 \item \nogloxy{\texttt{+ switch(id: String): void}}
 \\ Si occupa di cambiare il diagramma corrente.	
 
-\\ \textbf{Parametri}:
+\textbf{Parametri}:
 \begin{itemize}
 \item \nogloxy{\texttt{id: String}}
 \\ Id del diagramma da cambiare.
